[metadata]
name = python-esiclient
summary = ESI client
description-file =
    README.md
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
python-requires = >=3.6
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    esiclient

[entry_points]
openstack.cli.extension =
    esiclient = esiclient.plugin

openstack.esiclient.v1 =
    esi_node_network_attach = esiclient.v1.node_network:Attach
    esi_node_network_detach = esiclient.v1.node_network:Detach
    esi_node_network_list = esiclient.v1.node_network:List
