[metadata]
name = python-esiclient
summary = ESI client
description-file =
    README.md
license = Apache License, Version 2.0
author = ESI
author-email = esi@lists.massopen.cloud
python-requires = >=3.6
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    esiclient

[entry_points]
openstack.cli.extension =
    esiclient = esiclient.plugin

openstack.esiclient.v1 =
    esi_mdc_baremetal_node_list = esiclient.v1.mdc.mdc_node_baremetal:MDCBaremetalNodeList
    esi_node_network_attach = esiclient.v1.node_network:Attach
    esi_node_network_detach = esiclient.v1.node_network:Detach
    esi_node_network_list = esiclient.v1.node_network:List
    esi_node_volume_attach = esiclient.v1.node_volume:Attach
    esi_cluster_list = esiclient.v1.cluster.cluster:List
    esi_cluster_orchestrate = esiclient.v1.cluster.cluster:Orchestrate
    esi_cluster_undeploy = esiclient.v1.cluster.cluster:Undeploy
    esi_openshift_orchestrate = esiclient.v1.cluster.openshift:Orchestrate
    esi_openshift_undeploy = esiclient.v1.cluster.openshift:Undeploy
    esi_switch_vlan_list = esiclient.v1.switch:ListVLAN
    esi_switch_port_list = esiclient.v1.switch:ListSwitchPort
    esi_switch_list = esiclient.v1.switch:List
    esi_switch_port_disable_access = esiclient.v1.switch:DisableAccessPort
    esi_switch_port_enable_access = esiclient.v1.switch:EnableAccessPort
    esi_switch_port_enable_trunk = esiclient.v1.switch:EnableTrunkPort
    esi_switch_trunk_add_vlan = esiclient.v1.switch:AddTrunkVLAN
    esi_switch_trunk_remove_vlan = esiclient.v1.switch:RemoveTrunkVLAN
    esi_switch_port_disable_trunk = esiclient.v1.switch:DisableTrunkPort
    esi_trunk_create = esiclient.v1.trunk:Create
    esi_trunk_delete = esiclient.v1.trunk:Delete
    esi_trunk_list = esiclient.v1.trunk:List
    esi_trunk_add_network = esiclient.v1.trunk:AddNetwork
    esi_trunk_remove_network = esiclient.v1.trunk:RemoveNetwork
    esi_node_console_connect = esiclient.v1.node_console:NodeConsoleConnect
    esi_port_forwarding_create = esiclient.v1.port_forwarding:Create
    esi_port_forwarding_delete = esiclient.v1.port_forwarding:Delete
    esi_port_forwarding_purge = esiclient.v1.port_forwarding:Purge
